--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -1,13 +1,10 @@
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: 047719623163.dkr.ecr.eu-central-1.amazonaws.com/file-manager-app:latest
+    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
-      - ./src:/var/www/html
-      - ./vendor:/var/www/vendor
       - ./.env:/var/www/.env
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
@@ -18,3 +15,5 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
+      - LOG_GROUP_NAME=${LOG_GROUP_NAME}
+      - LOG_ENABLED=${LOG_ENABLED}
