--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug AWS Region Secret
+        run: |
+          echo "Attempting to access AWS_REGION secret."
+          echo "Value of secrets.AWS_REGION: '${{ secrets.AWS_REGION }}'"
+          echo "Value of env.AWS_REGION: '${{ env.AWS_REGION }}'"
+          if [ -z "${{ secrets.AWS_REGION }}" ]; then
+            echo "GITHUB_SECRET_AWS_REGION_IS_EMPTY_OR_UNSET"
+          else
+            echo "GITHUB_SECRET_AWS_REGION_IS_SET"
+          fi
+          if [ -z "${{ env.AWS_REGION }}" ]; then
+            echo "ENV_AWS_REGION_IS_EMPTY_OR_UNSET"
+          else
+            echo "ENV_AWS_REGION_IS_SET"
+          fi
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
