--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,11 +39,23 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           IMAGE_URI: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
         run: |
+          echo "--- Starting build and push --- "
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          echo "--- Docker build complete --- "
+
+          echo "--- Pushing SHA-tagged image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --- "
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "--- Pushing latest-tagged image: $ECR_REGISTRY/$ECR_REPOSITORY:latest --- "
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          echo "--- Docker pushes complete --- "
+
+          echo "--- Setting outputs --- "
+          echo "Image Tag to set: ${IMAGE_TAG}"
+          echo "Image URI to set: ${IMAGE_URI}"
+
           echo "image_tag=${IMAGE_TAG}" >> $GITHUB_OUTPUT
           echo "image_uri=${IMAGE_URI}" >> $GITHUB_OUTPUT
+          echo "--- Outputs set --- "
 
   deploy-web-server:
     name: Deploy Web Server
