Deploy AWS Rekognition to upload

--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -1,16 +1,16 @@
 services:
   db:
     image: mysql:8.0
-    restart: unless-stopped
     ports:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./src/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     command: --bind-address=0.0.0.0
 
 volumes:
